--- a/src/2-design-tokens/0-overview.stories.mdx
+++ b/src/2-design-tokens/0-overview.stories.mdx
@@ -51,6 +51,16 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
+								<h2>What are design tokens?</h2>
+								<p>
+									Design tokens are an agnostic way to store variables such as typography, color, and spacing so that your design system can be shared across platforms like iOS,
+									Android, and websites.
+								</p>
+								<p>
+									In the world of UI, design tokens are subatomic particles. The design token <code>act-colour__purple</code> is a critical ingredient of a user interface, but it’s
+									not functional on its own. It needs to be applied to a component (atomic: atom) such as the background color of a button in order to come to life.
+								</p>
+								<h2>Our design tokens</h2>
 								<div className="act-card-grid">
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-breakpoints--page">
 										<div class="act-card__container">
