--- a/src/0-system/0-introduction.stories.mdx
+++ b/src/0-system/0-introduction.stories.mdx
@@ -51,20 +51,15 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
+								<p>Welcome to ACT Government's Website Design System for products and digital experiences.</p>
+								<p>
+									With the{" "}
+									<a href="https://www.act.gov.au/branding" target="_blank">
+										ACT Government Brand Guardian
+									</a>{" "}
+									as its foundation, the system consists of working code, design tools, resources and human interface guidelines.
+								</p>
 								<div className="act-card-grid">
-									<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="system-introduction--page">
-										<div class="act-card__container">
-											<div class="act-card__content">
-												<div class="act-card__icon">
-													<i class="fa-solid fa-layer-group"></i>
-												</div>
-												<div class="act-card__title">Design System</div>
-												<div class="act-card__cta">
-													<i class="fa-solid fa-arrow-right"></i>
-												</div>
-											</div>
-										</div>
-									</LinkTo>
 									<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="guidelines-overview--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
