--- a/src/0-system/technical-info.stories.mdx
+++ b/src/0-system/technical-info.stories.mdx
@@ -54,7 +54,7 @@ import LinkTo from "@storybook/addon-links/react";
 								<h2>Repo</h2>
 								<img src="https://img.shields.io/github/package-json/v/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
 								<p>
-									The repo for this project is hosted on GitHub and can be found{" "}
+									The repo and README for this project is hosted on GitHub and can be found{" "}
 									<a href="https://github.com/ACTGov-Design-System/ACTGov-Design-System" target="_blank" title="ACT Government GitHub">
 										here
 									</a>
@@ -105,16 +105,23 @@ import LinkTo from "@storybook/addon-links/react";
 									page previews.
 								</p>
 								<h4>_core</h4>
-								<p>The _core folder contains the global SCSS of the design system</p>
+								<p>The _core folder contains the global SCSS of the design system.</p>
 								<h4>_docs</h4>
-								<p>The _docs folder contains reusable components suitable for use in documentation pages</p>
+								<p>The _docs folder contains reusable components suitable for use in documentation pages.</p>
 								<h4>0-system</h4>
+								<p>The 0-system folder contains documentation pertaining to the overall design system.</p>
 								<h4>1-guidelines</h4>
+								<p>The 1-guidelines folder contains guidance and templates for creating and maintaining content and designs with the ACT WDS.</p>
 								<h4>2-design-tokens</h4>
+								<p>The 2-design-tokens folder contains all of the design tokens the following folders consume to generate components and patterns.</p>
 								<h4>3-layout</h4>
+								<p>The 3-layout folder contains documentation and examples of how pages are structures and displayed within the ACT WDS.</p>
 								<h4>4-components</h4>
+								<p>The 4-components folder stores all of the components maintained within the ACT WDS.</p>
 								<h4>5-patterns</h4>
+								<p>The 5-patterns folder contains combinations of components that create reusable patterns.</p>
 								<h4>6-previews</h4>
+								<p>The 6-previews folder contains pre-assembled versions of ACT Government web pages to demonstrate how the ACT WDS works.</p>
 							</div>
 						</div>
 					</div>
