--- a/src/0-system/roles.stories.mdx
+++ b/src/0-system/roles.stories.mdx
@@ -58,7 +58,6 @@ import LinkTo from "@storybook/addon-links/react";
 											<tr>
 												<th>Name</th>
 												<th>Role</th>
-												<th>Responsibility</th>
 												<th>Email</th>
 											</tr>
 										</thead>
@@ -66,7 +65,6 @@ import LinkTo from "@storybook/addon-links/react";
 											<tr>
 												<td>Jack Walsh</td>
 												<td>Senior Director, Digital Transformation</td>
-												<td>&nbsp;</td>
 												<td>jack.walsh@act.gov.au</td>
 											</tr>
 										</tbody>
@@ -79,7 +77,6 @@ import LinkTo from "@storybook/addon-links/react";
 						<div className="act-col__cw-12">
 							<div className="act-box">
 								<h2>Pollen</h2>
-								<h3>Production</h3>
 								<div className="act-table-container">
 									<table>
 										<thead>
@@ -94,42 +91,27 @@ import LinkTo from "@storybook/addon-links/react";
 											<tr>
 												<td>Gabby Shaw</td>
 												<td>Senior Consultant</td>
-												<td></td>
+												<td>Project Management</td>
 												<td>gabby@pollen.com.au</td>
 											</tr>
 											<tr>
 												<td>Jonathan Waterworth</td>
 												<td>Product Designer</td>
-												<td></td>
+												<td>User Interface & Experience</td>
 												<td>jonathan@pollen.com.au</td>
 											</tr>
 											<tr>
 												<td>Tom Milburn</td>
 												<td>Senior Product Engineer</td>
-												<td></td>
+												<td>Development & Engineering</td>
 												<td>tom@pollen.com.au</td>
 											</tr>
 											<tr>
 												<td>Theresa Flood</td>
 												<td>Product Researcher</td>
-												<td></td>
+												<td>Research & Validation</td>
 												<td>theresa@pollen.com.au</td>
 											</tr>
-										</tbody>
-									</table>
-								</div>
-								<h3>Oversight</h3>
-								<div className="act-table-container">
-									<table>
-										<thead>
-											<tr>
-												<th>Name</th>
-												<th>Role</th>
-												<th>Responsibility</th>
-												<th>Email</th>
-											</tr>
-										</thead>
-										<tbody>
 											<tr>
 												<td>Brett Mitchell</td>
 												<td>Managing Director</td>
@@ -141,12 +123,6 @@ import LinkTo from "@storybook/addon-links/react";
 												<td>Head of Design</td>
 												<td></td>
 												<td>brett.walsh@pollen.com.au</td>
-											</tr>
-											<tr>
-												<td>Craig Sharkie</td>
-												<td>Technical Director</td>
-												<td></td>
-												<td>craig@pollen.com.au</td>
 											</tr>
 										</tbody>
 									</table>
