--- a/src/4-components/0-overview.stories.mdx
+++ b/src/4-components/0-overview.stories.mdx
@@ -39,6 +39,9 @@ import LinkTo from "@storybook/addon-links/react";
 									</ul>
 								</div>
 								<h1>Components</h1>
+								<p>
+									<i className="fa-solid fa-atom"></i> <em>Atomic Molecules and Organisms</em>
+								</p>
 							</div>
 						</div>
 					</div>
@@ -51,6 +54,12 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
+								<h2>What are components?</h2>
+								<p>
+									Components are the reusable building blocks of our design system. Each component meets a specific interaction or user interface need, and has been specifically
+									created to work together to create patterns and intuitive user experiences.
+								</p>
+								<h2>ACT WDS Components</h2>
 								<div className="act-card-grid">
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-accordion-details--page">
 										<div class="act-card__container">
@@ -66,7 +75,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--default">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-overview--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
