--- a/src/0-system/0-introduction.stories.mdx
+++ b/src/0-system/0-introduction.stories.mdx
@@ -51,11 +51,11 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
-								<p>Welcome to ACT Government's Website Design System for products and digital experiences.</p>
+								<p>Welcome to ACT Government's Website Design System (ACT WDS) for digital experiences and websites.</p>
 								<p>
-									With the{" "}
+									With the ACT Government{" "}
 									<a href="https://www.act.gov.au/branding" target="_blank">
-										ACT Government Brand Guardian
+										Brand Guardian
 									</a>{" "}
 									as its foundation, the system consists of working code, design tools, resources and human interface guidelines.
 								</p>
