--- a/src/0-system/technical-info.stories.mdx
+++ b/src/0-system/technical-info.stories.mdx
@@ -66,7 +66,7 @@ import LinkTo from "@storybook/addon-links/react";
 						<div className="act-col__cw-12">
 							<div className="act-box">
 								<h2>Source Code</h2>
-								<p>The source code for this project is broken into three main directories:</p>
+								<p>The source code for this project is stored in three main directories:</p>
 								<ul>
 									<li>.storybook</li>
 									<li>src</li>
