--- a/src/5-patterns/0-overview.stories.mdx
+++ b/src/5-patterns/0-overview.stories.mdx
@@ -39,6 +39,9 @@ import LinkTo from "@storybook/addon-links/react";
 									</ul>
 								</div>
 								<h1>Patterns</h1>
+								<p>
+									<i className="fa-solid fa-atom"></i> <em>Atomic Organisms</em>
+								</p>
 							</div>
 						</div>
 					</div>
@@ -54,29 +57,29 @@ import LinkTo from "@storybook/addon-links/react";
 								<h2>Card Grids</h2>
 								<div className="act-card-grid">
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--default">
-										<div class="act-card__container">
-											<div class="act-card__content">
-												<div class="act-card__icon">
-													<i class="fa-solid fa-address-card"></i>
+										<div className="act-card__container">
+											<div className="act-card__content">
+												<div className="act-card__icon">
+													<i className="fa-solid fa-address-card"></i>
 												</div>
-												<div class="act-card__title">Standard</div>
-												<div class="act-card__description">A grid of cards built using multiple standard card components</div>
-												<div class="act-card__cta">
-													<i class="fa-solid fa-arrow-right"></i>
+												<div className="act-card__title">Standard</div>
+												<div className="act-card__description">A grid of cards built using multiple standard card components</div>
+												<div className="act-card__cta">
+													<i className="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
 									</LinkTo>
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-hero-rows-in-page-row--default">
-										<div class="act-card__container">
-											<div class="act-card__content">
-												<div class="act-card__icon">
-													<i class="fa-solid fa-image"></i>
+										<div className="act-card__container">
+											<div className="act-card__content">
+												<div className="act-card__icon">
+													<i className="fa-solid fa-image"></i>
 												</div>
-												<div class="act-card__title">Featured</div>
-												<div class="act-card__description">A grid of cards built using multiple feature card components</div>
-												<div class="act-card__cta">
-													<i class="fa-solid fa-arrow-right"></i>
+												<div className="act-card__title">Featured</div>
+												<div className="act-card__description">A grid of cards built using multiple feature card components</div>
+												<div className="act-card__cta">
+													<i className="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
@@ -91,15 +94,15 @@ import LinkTo from "@storybook/addon-links/react";
 								<h2>Footers</h2>
 								<div className="act-card-grid">
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--default">
-										<div class="act-card__container">
-											<div class="act-card__content">
-												<div class="act-card__icon">
-													<i class="fa-solid fa-earth-oceania"></i>
+										<div className="act-card__container">
+											<div className="act-card__content">
+												<div className="act-card__icon">
+													<i className="fa-solid fa-earth-oceania"></i>
 												</div>
-												<div class="act-card__title">Global Footer</div>
-												<div class="act-card__description">An assembly of all three footer components, to be included at the end of pages</div>
-												<div class="act-card__cta">
-													<i class="fa-solid fa-arrow-right"></i>
+												<div className="act-card__title">Global Footer</div>
+												<div className="act-card__description">An assembly of all three footer components, to be included at the end of pages</div>
+												<div className="act-card__cta">
+													<i className="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
@@ -114,15 +117,15 @@ import LinkTo from "@storybook/addon-links/react";
 								<h2>Features</h2>
 								<div className="act-card-grid">
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--default">
-										<div class="act-card__container">
-											<div class="act-card__content">
-												<div class="act-card__icon">
-													<i class="fa-solid fa-star"></i>
+										<div className="act-card__container">
+											<div className="act-card__content">
+												<div className="act-card__icon">
+													<i className="fa-solid fa-star"></i>
 												</div>
-												<div class="act-card__title">Feature Row</div>
-												<div class="act-card__description">An assembly of all three footer components, to be included at the end of pages</div>
-												<div class="act-card__cta">
-													<i class="fa-solid fa-arrow-right"></i>
+												<div className="act-card__title">Feature Row</div>
+												<div className="act-card__description">An assembly of all three footer components, to be included at the end of pages</div>
+												<div className="act-card__cta">
+													<i className="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
@@ -137,15 +140,15 @@ import LinkTo from "@storybook/addon-links/react";
 								<h2>Forms</h2>
 								<div className="act-card-grid">
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--default">
-										<div class="act-card__container">
-											<div class="act-card__content">
-												<div class="act-card__icon">
-													<i class="fa-solid fa-i-cursor"></i>
+										<div className="act-card__container">
+											<div className="act-card__content">
+												<div className="act-card__icon">
+													<i className="fa-solid fa-i-cursor"></i>
 												</div>
-												<div class="act-card__title">Basic Form</div>
-												<div class="act-card__description">An assembly of form components that build a basic web form</div>
-												<div class="act-card__cta">
-													<i class="fa-solid fa-arrow-right"></i>
+												<div className="act-card__title">Basic Form</div>
+												<div className="act-card__description">An assembly of form components that build a basic web form</div>
+												<div className="act-card__cta">
+													<i className="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
@@ -160,29 +163,29 @@ import LinkTo from "@storybook/addon-links/react";
 								<h2>Filter & Search</h2>
 								<div className="act-card-grid">
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--default">
-										<div class="act-card__container">
-											<div class="act-card__content">
-												<div class="act-card__icon">
-													<i class="fa-solid fa-filter"></i>
+										<div className="act-card__container">
+											<div className="act-card__content">
+												<div className="act-card__icon">
+													<i className="fa-solid fa-filter"></i>
 												</div>
-												<div class="act-card__title">Content Filter</div>
-												<div class="act-card__description">An assembly of components that create a content filter</div>
-												<div class="act-card__cta">
-													<i class="fa-solid fa-arrow-right"></i>
+												<div className="act-card__title">Content Filter</div>
+												<div className="act-card__description">An assembly of components that create a content filter</div>
+												<div className="act-card__cta">
+													<i className="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
 									</LinkTo>
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--default">
-										<div class="act-card__container">
-											<div class="act-card__content">
-												<div class="act-card__icon">
-													<i class="fa-solid fa-filter"></i>
+										<div className="act-card__container">
+											<div className="act-card__content">
+												<div className="act-card__icon">
+													<i className="fa-solid fa-filter"></i>
 												</div>
-												<div class="act-card__title">Content Filter</div>
-												<div class="act-card__description">An assembly of components that create a content filter</div>
-												<div class="act-card__cta">
-													<i class="fa-solid fa-arrow-right"></i>
+												<div className="act-card__title">Content Filter</div>
+												<div className="act-card__description">An assembly of components that create a content filter</div>
+												<div className="act-card__cta">
+													<i className="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
@@ -197,15 +200,15 @@ import LinkTo from "@storybook/addon-links/react";
 								<h2>Hero Rows</h2>
 								<div className="act-card-grid">
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--default">
-										<div class="act-card__container">
-											<div class="act-card__content">
-												<div class="act-card__icon">
-													<i class="fa-solid fa-feather-pointed"></i>
+										<div className="act-card__container">
+											<div className="act-card__content">
+												<div className="act-card__icon">
+													<i className="fa-solid fa-feather-pointed"></i>
 												</div>
-												<div class="act-card__title">In Page Hero</div>
-												<div class="act-card__description">Breadcrumbs and Heading 1 to create an in page header row</div>
-												<div class="act-card__cta">
-													<i class="fa-solid fa-arrow-right"></i>
+												<div className="act-card__title">In Page Hero</div>
+												<div className="act-card__description">Breadcrumbs and Heading 1 to create an in page header row</div>
+												<div className="act-card__cta">
+													<i className="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
