--- a/src/4-components/b1-buttons/b1.stories.mdx
+++ b/src/4-components/b1-buttons/b1.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Components/Alerts/Overview"
+	title="Components/Buttons/Overview"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -38,13 +38,13 @@ import LinkTo from "@storybook/addon-links/react";
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
 											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-alerts-overview--page">
-												Alerts <i className="fa-solid fa-angle-right"></i>
+												Buttons <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 									</ul>
 								</div>
-								<h1>Alerts</h1>
-								<p>An alert displays a prominent message to the user.</p>
+								<h1>Buttons</h1>
+								<p>Clickable elements used to trigger actions or navigation</p>
 							</div>
 						</div>
 					</div>
@@ -58,28 +58,28 @@ import LinkTo from "@storybook/addon-links/react";
 						<div className="act-col__cw-12">
 							<div className="act-box">
 								<div className="act-card-grid">
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--global-alert">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-buttons-standard-buttons--standard-buttons">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
-													<i class="fa-solid fa-earth-oceania"></i>
+													<i class="fa-solid fa-circle-dot"></i>
 												</div>
-												<div class="act-card__title">Global Alert</div>
-												<div class="act-card__description">Display alert information across the top of the page, above the masthead</div>
+												<div class="act-card__title">Standard Buttons</div>
+												<div class="act-card__description">Used to initialize an action, their labels express what action will occur when the user interacts with it</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--global-alert">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-buttons-inline-links--inline-links">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
-													<i class="fa-solid fa-file"></i>
+													<i class="fa-solid fa-up-right-from-square"></i>
 												</div>
-												<div class="act-card__title">In Page Alert</div>
-												<div class="act-card__description">Display alert information within the page that relates to the content</div>
+												<div class="act-card__title">Inline Links</div>
+												<div class="act-card__description">A navigational element, they may appear on their own, within a sentence or paragraph, or directly following the content.</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
