--- a/src/4-components/0-overview.stories.mdx
+++ b/src/4-components/0-overview.stories.mdx
@@ -61,7 +61,7 @@ import LinkTo from "@storybook/addon-links/react";
 								</p>
 								<h2>ACT WDS Components</h2>
 								<div className="act-card-grid">
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-accordion-details--page">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-accordion-overview--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
@@ -89,7 +89,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--default">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-buttons-overview--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
@@ -103,7 +103,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--default">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-cards-overview--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
@@ -117,21 +117,21 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--default">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-content-overview--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
 													<i class="fa-solid fa-quote-left"></i>
 												</div>
 												<div class="act-card__title">Content</div>
-												<div class="act-card__description">xxxx</div>
+												<div class="act-card__description">Additional visual components for use in blocks of content</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--default">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-footers-overview--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
@@ -257,7 +257,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-wayfinding-overview--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
