--- a/src/4-components/F1-Footers/f1.stories.mdx
+++ b/src/4-components/F1-Footers/f1.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Components/Alerts/Overview"
+	title="Components/Footers/Overview"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -37,14 +37,14 @@ import LinkTo from "@storybook/addon-links/react";
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-alerts-overview--page">
-												Alerts <i className="fa-solid fa-angle-right"></i>
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-footers-overview--page">
+												Footers <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 									</ul>
 								</div>
-								<h1>Alerts</h1>
-								<p>An alert displays a prominent message to the user.</p>
+								<h1>Footers</h1>
+								<p>Displays across the bottom of all ACT Government websites.</p>
 							</div>
 						</div>
 					</div>
@@ -58,28 +58,42 @@ import LinkTo from "@storybook/addon-links/react";
 						<div className="act-col__cw-12">
 							<div className="act-box">
 								<div className="act-card-grid">
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--global-alert">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-footers-main-footer--main-footer">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
-													<i class="fa-solid fa-earth-oceania"></i>
+													<i class="fa-solid fa-shoe-prints"></i>
 												</div>
-												<div class="act-card__title">Global Alert</div>
-												<div class="act-card__description">Display alert information across the top of the page, above the masthead</div>
+												<div class="act-card__title">Main Footer</div>
+												<div class="act-card__description">Used at the bottom of all pages to display - related links and other relevant information</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--global-alert">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-footers-acknowledgement-footer--acknowledgement-footer">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
-													<i class="fa-solid fa-file"></i>
+													<i class="fa-solid fa-leaf"></i>
 												</div>
-												<div class="act-card__title">In Page Alert</div>
-												<div class="act-card__description">Display alert information within the page that relates to the content</div>
+												<div class="act-card__title">Acknowledgment Footer</div>
+												<div class="act-card__description">Acknowledgment of Country to be used at the bottom of all pages</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-footers-feedback-footer--feedback-footer">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-comment-dots"></i>
+												</div>
+												<div class="act-card__title">Feedback Footer</div>
+												<div class="act-card__description">Used on content pages to receive feedback to help continually improve ACT pages and components</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
