--- a/src/4-components/0-overview.stories.mdx
+++ b/src/4-components/0-overview.stories.mdx
@@ -145,7 +145,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-form-elements-structure--default">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-form-elements-overview--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
@@ -195,6 +195,20 @@ import LinkTo from "@storybook/addon-links/react";
 												</div>
 												<div class="act-card__title">Popups</div>
 												<div class="act-card__description">A layer that appears above all other content on the page</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-search-elements-overview--page">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-magnifying-glass"></i>
+												</div>
+												<div class="act-card__title">Search Elements</div>
+												<div class="act-card__description">Search elements to facilitate the discovery of pages and data</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
