--- a/src/6-previews/0-overview.stories.mdx
+++ b/src/6-previews/0-overview.stories.mdx
@@ -39,6 +39,9 @@ import LinkTo from "@storybook/addon-links/react";
 									</ul>
 								</div>
 								<h1>Previews</h1>
+								<p>
+									<i className="fa-solid fa-atom"></i> <em>Atomic Pages</em>
+								</p>
 							</div>
 						</div>
 					</div>
