--- a/src/6-previews/0-overview.stories.mdx
+++ b/src/6-previews/0-overview.stories.mdx
@@ -54,7 +54,24 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
-								<h2>Introduction</h2>
+								<h2>Page Previews</h2>
+								<p>Below you will find examples of ACT Government web pages built using the tokens, components and patterns of the ACT WDS.</p>
+								<div className="act-card-grid">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="previews-access-canberra--access-canberra">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-universal-access"></i>
+												</div>
+												<div class="act-card__title">Access Canberra</div>
+												<div class="act-card__description">Example vehicle registration and renewal page</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+								</div>
 							</div>
 						</div>
 					</div>
