--- a/src/1-guidelines/0-overview.stories.mdx
+++ b/src/1-guidelines/0-overview.stories.mdx
@@ -51,7 +51,64 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
-								<h2>Introduction</h2>
+								<div className="act-card-grid">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="guidelines-accessibility--page">
+										<div className="act-card__container">
+											<div className="act-card__content">
+												<div className="act-card__icon">
+													<i class="fa-solid fa-universal-access"></i>
+												</div>
+												<div className="act-card__title">Accessibility</div>
+												<div className="act-card__description">XXXXX</div>
+												<div className="act-card__cta">
+													<i className="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="guidelines-branding--page">
+										<div className="act-card__container">
+											<div className="act-card__content">
+												<div className="act-card__icon">
+													<i class="fa-solid fa-swatchbook"></i>
+												</div>
+												<div className="act-card__title">Branding</div>
+												<div className="act-card__description">XXXXX</div>
+												<div className="act-card__cta">
+													<i className="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="guidelines-content--page">
+										<div className="act-card__container">
+											<div className="act-card__content">
+												<div className="act-card__icon">
+													<i class="fa-solid fa-book"></i>
+												</div>
+												<div className="act-card__title">Content</div>
+												<div className="act-card__description">XXXXX</div>
+												<div className="act-card__cta">
+													<i className="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="guidelines-glossary--page">
+										<div className="act-card__container">
+											<div className="act-card__content">
+												<div className="act-card__icon">
+													<i class="fa-solid fa-language"></i>
+												</div>
+												<div className="act-card__title">Glossary</div>
+												<div className="act-card__description">XXXXX</div>
+												<div className="act-card__cta">
+													<i className="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+								</div>
 							</div>
 						</div>
 					</div>
