--- a/src/4-components/0-overview.stories.mdx
+++ b/src/4-components/0-overview.stories.mdx
@@ -159,6 +159,20 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-hero-rows-overview--page">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-trophy"></i>
+												</div>
+												<div class="act-card__title">Hero Rows</div>
+												<div class="act-card__description">The first rows displayed on each page</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-form-elements-structure--default">
 										<div class="act-card__container">
 											<div class="act-card__content">
