--- a/src/4-components/f2-form-elements/f2.stories.mdx
+++ b/src/4-components/f2-form-elements/f2.stories.mdx
@@ -100,6 +100,20 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-form-elements-dropdowns--dropdowns">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-square-caret-down"></i>
+												</div>
+												<div class="act-card__title">Dropdowns</div>
+												<div class="act-card__description">An input control that allows a user to select one or more options from a number of choices</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-form-elements-toggles--toggles">
 										<div class="act-card__container">
 											<div class="act-card__content">
