--- a/src/4-components/h1-hero-rows/h1.stories.mdx
+++ b/src/4-components/h1-hero-rows/h1.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Components/Search Elements/Overview"
+	title="Components/Hero Rows/Overview"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -37,14 +37,14 @@ import LinkTo from "@storybook/addon-links/react";
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-search-elements-overview--page">
-												Search Elements <i className="fa-solid fa-angle-right"></i>
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-hero-rows-overview--page">
+												Hero Rows <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 									</ul>
 								</div>
-								<h1>Search Elements</h1>
-								<p>Search enables users to specify a word or a phrase to find relevant pieces of content without the use of navigation.</p>
+								<h1>Hero Rows</h1>
+								<p>The first rows displayed on each page</p>
 							</div>
 						</div>
 					</div>
@@ -58,70 +58,70 @@ import LinkTo from "@storybook/addon-links/react";
 						<div className="act-col__cw-12">
 							<div className="act-box">
 								<div className="act-card-grid">
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-search-basic-search--basic-search">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-hero-rows-home-card-row--home-card-row">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
-													<i class="fa-solid fa-folder-tree"></i>
+													<i class="fa-solid fa-object-group"></i>
 												</div>
-												<div class="act-card__title">Search Structure</div>
-												<div class="act-card__description">Illustrates how the search elements should be displayed</div>
+												<div class="act-card__title">Home Card Row</div>
+												<div class="act-card__description">For use on the homepage where cards are required</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-search-elements-search-bar--search-bar">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-hero-rows-home-link-row--home-link-row">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-link"></i>
+												</div>
+												<div class="act-card__title">Home Link Row</div>
+												<div class="act-card__description">For use on the homepage where links are required</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-hero-rows-home-widget-row--home-widget-row">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-gear"></i>
+												</div>
+												<div class="act-card__title">Home Widget Row</div>
+												<div class="act-card__description">For use on the homepage where a widget is required</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-hero-rows-home-search-row--home-search-row">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
 													<i class="fa-solid fa-magnifying-glass"></i>
 												</div>
-												<div class="act-card__title">Search Bar</div>
-												<div class="act-card__description">An input field that allows the user to perform search functions</div>
+												<div class="act-card__title">Home Search Row</div>
+												<div class="act-card__description">For use on the homepage where a search field is required</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-search-elements-search-result--search-result">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-hero-rows-page-title-row--page-title-row">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
-													<i class="fa-solid fa-square-poll-horizontal"></i>
+													<i class="fa-solid fa-heading"></i>
 												</div>
-												<div class="act-card__title">Search Result</div>
-												<div class="act-card__description">An element to display search results</div>
-												<div class="act-card__cta">
-													<i class="fa-solid fa-arrow-right"></i>
-												</div>
-											</div>
-										</div>
-									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-search-elements-search-stats--search-stats">
-										<div class="act-card__container">
-											<div class="act-card__content">
-												<div class="act-card__icon">
-													<i class="fa-solid fa-calculator"></i>
-												</div>
-												<div class="act-card__title">Search Stats</div>
-												<div class="act-card__description">An element to highlight and manipulate the search results</div>
-												<div class="act-card__cta">
-													<i class="fa-solid fa-arrow-right"></i>
-												</div>
-											</div>
-										</div>
-									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-search-elements-search-filter--search-filter">
-										<div class="act-card__container">
-											<div class="act-card__content">
-												<div class="act-card__icon">
-													<i class="fa-solid fa-filter"></i>
-												</div>
-												<div class="act-card__title">Search Filter</div>
-												<div class="act-card__description">An element that allows the user to filter their search results</div>
+												<div class="act-card__title">Page Title Row</div>
+												<div class="act-card__description">For use on all other pages, must be the first component on the page</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
