--- a/src/5-patterns/0-overview.stories.mdx
+++ b/src/5-patterns/0-overview.stories.mdx
@@ -54,15 +54,16 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
-								<h2>Card Grids</h2>
+								<h2>Patterns</h2>
+								<p>A collection of pre-built patterns generated using tokens and components.</p>
 								<div className="act-card-grid">
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--default">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-card-grids-default-card-grid--default-card-grid">
 										<div className="act-card__container">
 											<div className="act-card__content">
 												<div className="act-card__icon">
 													<i className="fa-solid fa-address-card"></i>
 												</div>
-												<div className="act-card__title">Standard</div>
+												<div className="act-card__title">Default Card Grid</div>
 												<div className="act-card__description">A grid of cards built using multiple standard card components</div>
 												<div className="act-card__cta">
 													<i className="fa-solid fa-arrow-right"></i>
@@ -70,143 +71,84 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-hero-rows-in-page-row--default">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-card-grids-feature-card-grid--feature-card-grid">
 										<div className="act-card__container">
 											<div className="act-card__content">
 												<div className="act-card__icon">
 													<i className="fa-solid fa-image"></i>
 												</div>
-												<div className="act-card__title">Featured</div>
-												<div className="act-card__description">A grid of cards built using multiple feature card components</div>
+												<div className="act-card__title">Featured Card Grid</div>
+												<div className="act-card__description">A grid of cards built using feature card components</div>
 												<div className="act-card__cta">
 													<i className="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
 									</LinkTo>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div className="act-flex__row">
-						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h2>Footers</h2>
-								<div className="act-card-grid">
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--default">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-content-contentarticle--content-article">
 										<div className="act-card__container">
 											<div className="act-card__content">
 												<div className="act-card__icon">
-													<i className="fa-solid fa-earth-oceania"></i>
+													<i class="fa-solid fa-newspaper"></i>
 												</div>
-												<div className="act-card__title">Global Footer</div>
-												<div className="act-card__description">An assembly of all three footer components, to be included at the end of pages</div>
+												<div className="act-card__title">Content Article</div>
+												<div className="act-card__description">Text and content components combined to produce an article</div>
 												<div className="act-card__cta">
 													<i className="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
 									</LinkTo>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div className="act-flex__row">
-						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h2>Features</h2>
-								<div className="act-card-grid">
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--default">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--footers">
 										<div className="act-card__container">
 											<div className="act-card__content">
 												<div className="act-card__icon">
-													<i className="fa-solid fa-star"></i>
+													<i class="fa-solid fa-shoe-prints"></i>
 												</div>
-												<div className="act-card__title">Feature Row</div>
-												<div className="act-card__description">An assembly of all three footer components, to be included at the end of pages</div>
+												<div className="act-card__title">Footers</div>
+												<div className="act-card__description">A complete set of footers for use across the bottom of all ACT web properties</div>
 												<div className="act-card__cta">
 													<i className="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
 									</LinkTo>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div className="act-flex__row">
-						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h2>Forms</h2>
-								<div className="act-card-grid">
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--default">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-search-basic-search--basic-search">
 										<div className="act-card__container">
 											<div className="act-card__content">
 												<div className="act-card__icon">
-													<i className="fa-solid fa-i-cursor"></i>
+													<i class="fa-solid fa-magnifying-glass"></i>
 												</div>
-												<div className="act-card__title">Basic Form</div>
-												<div className="act-card__description">An assembly of form components that build a basic web form</div>
+												<div className="act-card__title">Basic Search</div>
+												<div className="act-card__description">A complete set of footers for use across the bottom of all ACT web properties</div>
 												<div className="act-card__cta">
 													<i className="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
 									</LinkTo>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div className="act-flex__row">
-						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h2>Filter & Search</h2>
-								<div className="act-card-grid">
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--default">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-search-filtered-search--filtered-search">
 										<div className="act-card__container">
 											<div className="act-card__content">
 												<div className="act-card__icon">
-													<i className="fa-solid fa-filter"></i>
+													<i class="fa-solid fa-filter"></i>
 												</div>
-												<div className="act-card__title">Content Filter</div>
-												<div className="act-card__description">An assembly of components that create a content filter</div>
+												<div className="act-card__title">Filtered Search</div>
+												<div className="act-card__description">A complete set of footers for use across the bottom of all ACT web properties</div>
 												<div className="act-card__cta">
 													<i className="fa-solid fa-arrow-right"></i>
 												</div>
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--default">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-wayfinding-top-bar--top-bar">
 										<div className="act-card__container">
 											<div className="act-card__content">
 												<div className="act-card__icon">
-													<i className="fa-solid fa-filter"></i>
+													<i class="fa-solid fa-compass"></i>
 												</div>
-												<div className="act-card__title">Content Filter</div>
-												<div className="act-card__description">An assembly of components that create a content filter</div>
-												<div className="act-card__cta">
-													<i className="fa-solid fa-arrow-right"></i>
-												</div>
-											</div>
-										</div>
-									</LinkTo>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div className="act-flex__row">
-						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h2>Hero Rows</h2>
-								<div className="act-card-grid">
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-footers--default">
-										<div className="act-card__container">
-											<div className="act-card__content">
-												<div className="act-card__icon">
-													<i className="fa-solid fa-feather-pointed"></i>
-												</div>
-												<div className="act-card__title">In Page Hero</div>
-												<div className="act-card__description">Breadcrumbs and Heading 1 to create an in page header row</div>
+												<div className="act-card__title">Top Bar</div>
+												<div className="act-card__description">A complete set of footers for use across the bottom of all ACT web properties</div>
 												<div className="act-card__cta">
 													<i className="fa-solid fa-arrow-right"></i>
 												</div>
