--- a/src/4-components/c1-cards/c1.stories.mdx
+++ b/src/4-components/c1-cards/c1.stories.mdx
@@ -79,7 +79,9 @@ import LinkTo from "@storybook/addon-links/react";
 													<i class="fa-solid fa-star"></i>
 												</div>
 												<div class="act-card__title">Featured Cards</div>
-												<div class="act-card__description">A navigational element, they may appear on their own, within a sentence or paragraph, or directly following the content.</div>
+												<div class="act-card__description">
+													A navigational element, they may appear on their own, within a sentence or paragraph, or directly following the content.
+												</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
