wayfinding component descriptions

--- a/src/4-components/W1-Wayfinding/w1.stories.mdx
+++ b/src/4-components/W1-Wayfinding/w1.stories.mdx
@@ -65,7 +65,7 @@ import LinkTo from "@storybook/addon-links/react";
 													<i class="fa-solid fa-landmark-flag"></i>
 												</div>
 												<div class="act-card__title">Masthead</div>
-												<div class="act-card__description">XXXXXX</div>
+												<div class="act-card__description">Used to show unity across ACT websites</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
@@ -79,7 +79,7 @@ import LinkTo from "@storybook/addon-links/react";
 													<i class="fa-solid fa-diamond-turn-right"></i>
 												</div>
 												<div class="act-card__title">Nav Bar</div>
-												<div class="act-card__description">XXXXXX</div>
+												<div class="act-card__description">Used to help users navigate the website through the menu button</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
@@ -93,7 +93,7 @@ import LinkTo from "@storybook/addon-links/react";
 													<i class="fa-solid fa-bars"></i>
 												</div>
 												<div class="act-card__title">Sidebar</div>
-												<div class="act-card__description">XXXXXX</div>
+												<div class="act-card__description">Used for linking between related content on the side of content pages</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
@@ -107,7 +107,7 @@ import LinkTo from "@storybook/addon-links/react";
 													<i class="fa-solid fa-ellipsis"></i>
 												</div>
 												<div class="act-card__title">Pagination</div>
-												<div class="act-card__description">XXXXXX</div>
+												<div class="act-card__description">Used for splitting information across multiple pages</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
@@ -121,7 +121,7 @@ import LinkTo from "@storybook/addon-links/react";
 													<i class="fa-solid fa-table-list"></i>
 												</div>
 												<div class="act-card__title">Mega Menu</div>
-												<div class="act-card__description">XXXXXX</div>
+												<div class="act-card__description">Used to help users navigate the website via a collection of links</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
@@ -135,7 +135,7 @@ import LinkTo from "@storybook/addon-links/react";
 													<i class="fa-solid fa-bread-slice"></i>
 												</div>
 												<div class="act-card__title">Breadcrumbs</div>
-												<div class="act-card__description">XXXXXX</div>
+												<div class="act-card__description">A list of links, showing current page in the website hierarchy, used to help the user navigate a website</div>
 												<div class="act-card__cta">
 													<i class="fa-solid fa-arrow-right"></i>
 												</div>
