intro documentation update

--- a/src/0-system/0-introduction.stories.mdx
+++ b/src/0-system/0-introduction.stories.mdx
@@ -51,13 +51,31 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
-								<p>Welcome to ACT Government's Website Design System (ACT WDS) for digital experiences and websites.</p>
+								<p>
+									Welcome to ACT Government's Website Design System (ACT WDS) for digital experiences and websites. The purpose of this is to provide a consistent, accessible and
+									inclusive digital experience across ACT Government digital services.
+								</p>
+								<p>
+									The primary purpose of this website is to provide coded components primarily for developers to utilise. To see examples of Dos and Don'ts for particular
+									components please visit the{" "}
+									<a href="https://www.figma.com/file/07TWQyWk4YAEVjhxNmFZ6L/ACT-Design-System?node-id=2289%3A40355&t=hgMqmHjHIeYWiEl6-3" target="_blank">
+										ACT Website Design System Figma
+									</a>
+									.
+								</p>
 								<p>
 									With the ACT Government{" "}
 									<a href="https://www.act.gov.au/branding" target="_blank">
 										Brand Guardian
 									</a>{" "}
 									as its foundation, the system consists of working code, design tools, resources and human interface guidelines.
+								</p>
+								<p>
+									If you have any questions, notice issues or bugs, or need to discuss anything relating to the ACT WDS reach out to{" "}
+									<a href="mailto:jack.walsh@act.gov.au" target="_blank">
+										jack.walsh@act.gov.au
+									</a>
+									.
 								</p>
 								<div className="act-card-grid">
 									<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="guidelines-overview--page">
