updates to changelog and roles documentation

--- a/src/0-system/changelog.stories.mdx
+++ b/src/0-system/changelog.stories.mdx
@@ -51,6 +51,13 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
+								<p>
+									Below is a summary of the latest version, commits and sizing. If you require a new component or are having troubles finding a component, please refer to the{" "}
+									<a href="https://docs.google.com/document/d/1luBj6FXBZ2zlo8EiP0pQva0jR30MeSeAETIkTtVMD5Y/edit#heading=h.4ylqr5s5jzwr" target="_blank">
+										Process for Adding a Component
+									</a>{" "}
+									documentation.
+								</p>
 								<div className="act-table-container">
 									<table className="act-table">
 										<thead>
