--- a/src/0-system/roles.stories.mdx
+++ b/src/0-system/roles.stories.mdx
@@ -51,6 +51,14 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
+								<p>
+									The ACT WDS is managed by the Online Services Team and supported by the DDTS. If you have any questions, notice issues or bugs, or need to discuss anything
+									relating to the ACT WDS reach out to{" "}
+									<a href="mailto:jack.walsh@act.gov.au" target="_blank">
+										jack.walsh@act.gov.au
+									</a>
+									.
+								</p>
 								<h2>ACT Government</h2>
 								<div className="act-table-container">
 									<table>
