added guidelines intro and placeholder text

--- a/src/1-guidelines/0-overview.stories.mdx
+++ b/src/1-guidelines/0-overview.stories.mdx
@@ -51,6 +51,7 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
+								<p>This is a repository for all related guidelines for the Design System. This will be added to over time as rules and requirements are identified.</p>
 								<div className="act-card-grid">
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="guidelines-accessibility--page">
 										<div className="act-card__container">
@@ -59,7 +60,7 @@ import LinkTo from "@storybook/addon-links/react";
 													<i class="fa-solid fa-universal-access"></i>
 												</div>
 												<div className="act-card__title">Accessibility</div>
-												<div className="act-card__description">XXXXX</div>
+												<div className="act-card__description">To Be Completed</div>
 												<div className="act-card__cta">
 													<i className="fa-solid fa-arrow-right"></i>
 												</div>
@@ -73,7 +74,7 @@ import LinkTo from "@storybook/addon-links/react";
 													<i class="fa-solid fa-swatchbook"></i>
 												</div>
 												<div className="act-card__title">Branding</div>
-												<div className="act-card__description">XXXXX</div>
+												<div className="act-card__description">To Be Completed</div>
 												<div className="act-card__cta">
 													<i className="fa-solid fa-arrow-right"></i>
 												</div>
@@ -87,7 +88,7 @@ import LinkTo from "@storybook/addon-links/react";
 													<i class="fa-solid fa-book"></i>
 												</div>
 												<div className="act-card__title">Content</div>
-												<div className="act-card__description">XXXXX</div>
+												<div className="act-card__description">To Be Completed</div>
 												<div className="act-card__cta">
 													<i className="fa-solid fa-arrow-right"></i>
 												</div>
@@ -101,7 +102,7 @@ import LinkTo from "@storybook/addon-links/react";
 													<i class="fa-solid fa-language"></i>
 												</div>
 												<div className="act-card__title">Glossary</div>
-												<div className="act-card__description">XXXXX</div>
+												<div className="act-card__description">To Be Completed</div>
 												<div className="act-card__cta">
 													<i className="fa-solid fa-arrow-right"></i>
 												</div>
