--- a/src/4-components/a1-accordion/a11-docs.stories.mdx
+++ b/src/4-components/a1-accordion/a11-docs.stories.mdx
@@ -1,8 +1,8 @@
 import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs";
 import { themes, ThemeProvider, convert, ensure } from "@storybook/theming";
-import Masthead from "../../../_docs/masthead";
-import AoC from "../../../_docs/aoc";
-import Footer from "../../../_docs/footer";
+import Masthead from "../../_docs/masthead";
+import AoC from "../../_docs/aoc";
+import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
@@ -37,12 +37,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-alerts-overview--page">
-												Accordion <i className="fa-solid fa-angle-right"></i>
-											</LinkTo>
-										</li>
-										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-alerts-global-alert-docs--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-overview--pageoverview--page">
 												Accordion <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
