--- a/src/4-components/a2-alerts/a21-alert-global/a21-docs.stories.mdx
+++ b/src/4-components/a2-alerts/a21-alert-global/a21-docs.stories.mdx
@@ -64,11 +64,10 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-box">
 								<h3>Usage</h3>
 								<p>
-									Global alerts are designed to capture the attention of the user in a deliberately intrusive way. They persist over a session but are user dismissible, and are purposefully created and not initiated by a user interaction or system event.
+									Global alerts are designed to capture the attention of the user in a deliberately intrusive way. They persist over a session but are user dismissible, and are
+									purposefully created and not initiated by a user interaction or system event.
 								</p>
-								<p>
-									Use global alerts:
-								</p>
+								<p>Use global alerts:</p>
 								<ul>
 									<li>to attract the attention of the user for important messages, or to encourage an action</li>
 									<li>for messages or actions that are relevant to the entire product or system, not just a feature or page</li>
@@ -95,7 +94,10 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
-								<LinkTo className="act-button act-button__primary act-button__default act-button__icon-left act-button__primary-undefined" kind="components-alerts-global-alert--global-alert">
+								<LinkTo
+									className="act-button act-button__primary act-button__default act-button__icon-left act-button__primary-undefined"
+									kind="components-alerts-global-alert--global-alert"
+								>
 									View Component
 									<i class="fa-solid fa-eye"></i>
 								</LinkTo>
