--- a/src/4-components/p1-popups/p1-docs.stories.mdx
+++ b/src/4-components/p1-popups/p1-docs.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Components/Buttons/Docs"
+	title="Components/Popups/Docs"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -38,13 +38,13 @@ import LinkTo from "@storybook/addon-links/react";
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
 											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-overview--pageoverview--page">
-												Buttons <i className="fa-solid fa-angle-right"></i>
+												Popups <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 									</ul>
 								</div>
-								<h1>Buttons</h1>
-								<p>Buttons provide users with the ability to submit an action.</p>
+								<h1>Popups</h1>
+								<p>Dialogs make a user stop and think by presenting them with a critical action or piece of information required to continue.</p>
 							</div>
 						</div>
 					</div>
@@ -58,12 +58,20 @@ import LinkTo from "@storybook/addon-links/react";
 						<div className="act-col__cw-12">
 							<div className="act-box">
 								<h3>Usage</h3>
-								<p>Buttons should be used when the user performs an action, and should describe what happens when pressed. Examples of button contexts include:</p>
+								<p>Dialogs make a user stop and think by presenting them with a critical action or piece of information required to continue.</p>
+								<p>Use dialogs to:</p>
 								<ul>
-									<li>Starting or submitting a form</li>
-									<li>cancelling a transaction</li>
-									<li>saving information</li>
-									<li>making a payment</li>
+									<li>notify a user of an immediate response required to continue</li>
+									<li>confirm a user's action when it cannot be undone</li>
+									<li>notify a user of urgent information that affects their current process</li>
+								</ul>
+								<h4>Do:</h4>
+								<ul>
+									<li>ensure the headline and call to actions are clear and reflect the action or task</li>
+									<li>clearly explain the potential consequences of the action</li>
+									<li>use danger dialogs for destructive or irreversible actions</li>
+									<li>when required, give the user an option to close the dialog with no change</li>
+									<li>use sparingly and only when necessary. Overuse can cause disruption to the user</li>
 								</ul>
 							</div>
 						</div>
@@ -71,52 +79,45 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
-								<h3>Buttons vs. links</h3>
-								<p>Buttons should be used if there is an action performed. For navigating users to different pages or to another part within the same page, use a text link instead.</p>
-							</div>
-						</div>
-					</div>
-					<div className="act-flex__row">
-						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h3>Icons</h3>
-								<p>Icons can be added to support the action. Avoid using an icon as standalone as they may be interpreted differently by different users. It is important to ensure where an icon is used it matches the intended action.</p>
-							</div>
-						</div>
-					</div>
-					<div className="act-flex__row">
-						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h3>Tips</h3>
+								<h3>Types of dialogs</h3>
 								<ul>
-									<li>Disabled buttons can be harder to see, so avoid using them where possible</li>
-									<li>Consider the GOV.UK guidance on <a href="https://design-system.service.gov.uk/components/button/#stop-users-from-accidentally-sending-information-more-than-once">how to stop users from accidentally sending information more than once</a></li>
-									<li>Overusing buttons and button-style links makes them less noticeable</li>
-									<li>A comprehensive review of buttons vs. links is available from Indiana University - <a href="https://ux.iu.edu/writings/buttons-vs-links-basic/">Buttons & Links - the Basics</a></li>
+									<li>Transactional - alert a user to urgent information they must acknowledge before continuing</li>
+									<li>Single call to action - when a single acknowledgement is required from the user</li>
+									<li>Danger - alert a user to a destructive or irreversible action they must confirm before continuing</li>
+									<li>Dismissible - when an action does not need to be selected and the user can return to the previous state with no change</li>
 								</ul>
-    						</div>
-    					</div>
-    				</div>
-    				<div className="act-flex__row">
-    					<div className="act-col__cw-12">
-    						<div className="act-box">
-    							<LinkTo
-    								className="act-button act-button__primary act-button__default act-button__icon-left act-button__primary-undefined"
-    								kind="components-buttons-standard-buttons--standard-buttons"
-    							>
-    								View Component
-    								<i class="fa-solid fa-eye"></i>
-    							</LinkTo>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
-    </main>
-    <footer className="act-footer">
-    	<AoC />
-    	<Footer />
-    </footer>
-
+							</div>
+						</div>
+					</div>
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h3>Dismissible vs non-dismissible</h3>
+								<p>
+									Dismissible dialogs allow a user to close the dialog with no action taken via a close button in the top right corner or clicking outside the dialog container.
+									Non-dismissible dialogs do not have a close button and a user must select a call to action button in order to proceed.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h3>When to avoid</h3>
+								<ul>
+									<li>to display simple alerts, consider in-page alerts</li>
+									<li>to capture user details, consider simple forms</li>
+									<li>to display large amounts of information</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
+	<footer className="act-footer">
+		<AoC />
+		<Footer />
+	</footer>
 </div>
