--- a/src/4-components/c2-content/c2.stories.mdx
+++ b/src/4-components/c2-content/c2.stories.mdx
@@ -86,6 +86,20 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-content-managed-by--managed-by">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-key"></i>
+												</div>
+												<div class="act-card__title">Managed By</div>
+												<div class="act-card__description">To help give the user the context of who is managing pages</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-content-quote--quote">
 										<div class="act-card__container">
 											<div class="act-card__content">
