--- a/src/4-components/c2-content/c2-docs.stories.mdx
+++ b/src/4-components/c2-content/c2-docs.stories.mdx
@@ -96,6 +96,25 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
+								<h3>Links List</h3>
+								<p>Link lists surface and group related content.</p>
+								<h4>Do</h4>
+								<ul>
+									<li>keep links short and intuitive for users to scan</li>
+									<li>use the writing guide to ensure you keep the tone active.</li>
+								</ul>
+								<h4>Do not use:</h4>
+								<ul>
+									<li>for pages that aren't related as this is likely to confuse users.</li>
+									<li>in a transactional service or a form</li>
+									<li>to link to content on the same page, consider in-page navigation</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
 								<h3>Quote</h3>
 								<p>Quotes are used on content pages to help visually break up the page as well as calling out important information.</p>
 								<h4>Do</h4>
