--- a/src/1-guidelines/0-overview.stories.mdx
+++ b/src/1-guidelines/0-overview.stories.mdx
@@ -87,8 +87,8 @@ import LinkTo from "@storybook/addon-links/react";
 												<div className="act-card__icon">
 													<i class="fa-solid fa-book"></i>
 												</div>
-												<div className="act-card__title">Content</div>
-												<div className="act-card__description">To Be Completed</div>
+												<div className="act-card__title">Content Blocks</div>
+												<div className="act-card__description"></div>
 												<div className="act-card__cta">
 													<i className="fa-solid fa-arrow-right"></i>
 												</div>
@@ -103,6 +103,20 @@ import LinkTo from "@storybook/addon-links/react";
 												</div>
 												<div className="act-card__title">Glossary</div>
 												<div className="act-card__description">To Be Completed</div>
+												<div className="act-card__cta">
+													<i className="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="guidelines-media--page">
+										<div className="act-card__container">
+											<div className="act-card__content">
+												<div className="act-card__icon">
+													<i class="fa-solid fa-swatchbook"></i>
+												</div>
+												<div className="act-card__title">Media</div>
+												<div className="act-card__description"></div>
 												<div className="act-card__cta">
 													<i className="fa-solid fa-arrow-right"></i>
 												</div>
