--- a/src/1-guidelines/media.stories.mdx
+++ b/src/1-guidelines/media.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Guidelines/Content"
+	title="Guidelines/Media"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -37,13 +37,13 @@ import LinkTo from "@storybook/addon-links/react";
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="guidelines-overview-content--page">
-												Content <i className="fa-solid fa-angle-right"></i>
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="guidelines-overview-media--page">
+												Media <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 									</ul>
 								</div>
-								<h1>Content</h1>
+								<h1>Media</h1>
 							</div>
 						</div>
 					</div>
@@ -58,9 +58,9 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-box">
 								<p>Used to help break up content by displaying it visually in columns</p>
 								<div className="act-img">
-									<img src="/images/content_blocks.png" alt="Illustration of the available content width options" />
+									<img src="/images/media.png" alt="Illustration of the available media width options" />
 									<div className="act-img__description act-p-small">
-										<i class="fa-solid fa-circle-info"></i> Illustration of the available content width options
+										<i class="fa-solid fa-circle-info"></i> Illustration of the available media width options
 									</div>
 								</div>
 							</div>
