updated Docs naming to Guide

--- a/src/4-components/b1-buttons/b1-docs.stories.mdx
+++ b/src/4-components/b1-buttons/b1-docs.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Components/Buttons/Docs"
+	title="Components/Buttons/Guidance"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
