--- a/src/4-components/t2-tabs/t2-docs.stories.mdx
+++ b/src/4-components/t2-tabs/t2-docs.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Components/Tabs/Docs"
+	title="Components/Tabs/Guidance"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -62,7 +62,7 @@ import LinkTo from "@storybook/addon-links/react";
 									Use tabs to organise content and allow users to move between related content sections or views at the same level of hierarchy. They allow users to focus on
 									specific content whilst remaining clear on the overall context of the screen.
 								</p>
-								<p>Do:</p>
+								<h4>Do:</h4>
 								<ul>
 									<li>ensure each tab contains content that is distinct from the others</li>
 									<li>use short (preferably single word), easily scannable, unique titles</li>
