--- a/src/5-patterns/5-docs.stories.mdx
+++ b/src/5-patterns/5-docs.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Patterns/Docs"
+	title="Patterns/Guidance"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
