--- a/src/1-guidelines/1-docs.stories.mdx
+++ b/src/1-guidelines/1-docs.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Guidelines/Docs"
+	title="Guidelines/Guidance"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -32,7 +32,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="guidelines-docs--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="guidelines-guidance--page">
 												Guidelines <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
