--- a/src/4-components/a2-alerts/a22-alert-inpage/a22-docs.stories.mdx
+++ b/src/4-components/a2-alerts/a22-alert-inpage/a22-docs.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Components/Alerts/In Page Alert/Docs"
+	title="Components/Alerts/In Page Alert/Guidance"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -42,7 +42,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-alerts-global-alert-docs--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-alerts-global-alert-guidance--page">
 												In Page Alert <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
