--- a/src/4-components/c1-cards/c1-docs.stories.mdx
+++ b/src/4-components/c1-cards/c1-docs.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Components/Cards/Docs"
+	title="Components/Cards/Guidance"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
