--- a/src/4-components/f1-footers/f1-docs.stories.mdx
+++ b/src/4-components/f1-footers/f1-docs.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Components/Footers/Docs"
+	title="Components/Footers/Guidance"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
