--- a/src/4-components/f2-form-elements/f2-docs.stories.mdx
+++ b/src/4-components/f2-form-elements/f2-docs.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Components/Form Elements/Docs"
+	title="Components/Form Elements/Guidance"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
