--- a/src/4-components/p1-popups/p1-docs.stories.mdx
+++ b/src/4-components/p1-popups/p1-docs.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Components/Popups/Docs"
+	title="Components/Popups/Guidance"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
