--- a/src/4-components/s1-search-elements/s1-docs.stories.mdx
+++ b/src/4-components/s1-search-elements/s1-docs.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Components/Search Elements/Docs"
+	title="Components/Search Elements/Guidance"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -37,7 +37,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-search-elements-docs--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-search-elements-guidance--page">
 												Search Elements <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
