--- a/src/4-components/t3-tags/t3-docs.stories.mdx
+++ b/src/4-components/t3-tags/t3-docs.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Components/Tags/Docs"
+	title="Components/Tags/Guidance"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
